set(SOURCES
	ANSI.cpp
	CPtrList.cpp
	GrafTypes.cpp
	UDateTime.cpp
	UDigest.cpp
	UError.cpp
	UGraphics.cpp
	UKeyboard.cpp
	UMath.cpp
	UMemory.cpp
	UMouse.cpp
	USound.cpp
	UText.cpp
	UTimer.cpp
)

set(HEADERS
	ANSI.h
	CPtrList.h
	GrafTypes.h
	MoreTypes.h
	typedefs.h
	UDateTime.h
	UDigest.h
	UError.h
	UGraphics.h
	UKeyboard.h
	UMath.h
	UMouse.h
	UMemory.h
	USound.h
	UText.h
	UTimer.h
)

add_library(
	Haxial SHARED
	${SOURCES}
	${HEADERS}
)
