set(SOURCES
	ANSI.cpp
	CPtrList.cpp
	CTwofish.cpp
	GrafTypes.cpp
	UCryptTransact.cpp
	UDateTime.cpp
	UDigest.cpp
	UError.cpp
	UGraphics.cpp
	UKeyboard.cpp
	UMath.cpp
	UMemory.cpp
	UMouse.cpp
	URegularTransport.cpp
	USound.cpp
	UText.cpp
	UTimer.cpp
	UWindow.cpp
)

set(HEADERS
	ANSI.h
	CPtrList.h
	CTwofish.h
	GrafTypes.h
	MoreTypes.h
	typedefs.h
	UCryptTransact.h
	UDateTime.h
	UDigest.h
	UError.h
	UGraphics.h
	UKeyboard.h
	UMath.h
	UMouse.h
	UMemory.h
	URegularTransport.h
	USound.h
	UText.h
	UTimer.h
	UWindow.h
)

add_library(
	Haxial SHARED
	${SOURCES}
	${HEADERS}
)
